harness/fixtures/enforce-arrow-function/good/harness-ignored.ts
// harness-ignore: enforce-arrow-function
function needed() {
  return this;
}
