harness/fixtures/enforce-arrow-function/bad/default-export-anonymous.ts
// @ts-nocheck
export default function () {
  return 1;
}
